# misc

./: .gitignore  2011_Canadian_GP_lap_times.csv  README.md  addscalebar  barnsley_fern.py  collatz.py  collatz_1000.dot  collatz_10000.dot  compresspdf.sh  convert_md_github.py  grafting_numbers.py  kaprekar_routine.py  lychrel_numbers.py  mandelbrot.py  mandelbrot_recursive.py  nautilus_shortcut_hack.md  orbit_multiple_bodies.py  proto_mines_AI.ipynb  pull_git_repos  pymines.py  scipy_data_fitting.py  status_git_repos  ulam_spiral.py  visualize_statistical_distributions.py  xy2gsa
data_analysis/f1_data/: 2011_Canadian_GP.py  f1_wdc_standings.py  get_f1_standings_1991-current.py
data_analysis/f1_wdc_standings/: pyproject.toml  visualize_f1_wdc_standings_since_1991.py
data_scraping/web_scrapers/xkcd_scraper/: README.md  pyproject.toml  xkcd_scraper.py
datamining/: f1_standings_1991-2017.py  f1_wdc_standings.py  teses_pmt.csv  xkcd_scraper.py
datamining/nomes_ibge/: scrape_ibge_names.py
datascraping/: teses_ltf.bib  teses_ltf.csv  teses_pmt.xls  teses_usp_scraper.py  teses_usp_scraper.py.bak
datascraping/nomes_ibge/: scrape_ibge_names.py
f1standings/: f1_standings_1991-2017.py  f1_wdc_standings.py  get_f1_standings_1991-current.py
game_of_life/: game_of_life.py
games/pymines/: README.md  main.py  pymines.py  pyproject.toml
mathematics/number_theory/: lychrel_numbers.py
mathematics/optimization/: golden_section_search.py
mathematics/statistics/: visualize_statistical_distributions.ipynb
templates/: Elsevier article.tex  LaTeX article.tex
(+59 files in other folders)
